[[package]]
name = "flask"
version = "3.1.3"
description = "A micro web framework"
category = "main"
optional = false
python-versions = ">=3.11"

[[package]]
name = "python-telegram-bot"
version = "22.6"
description = "Telegram Bot API library"
category = "main"
optional = false
python-versions = ">=3.11"

[[package]]
name = "requests"
version = "2.32.5"
description = "HTTP library"
category = "main"
optional = false
python-versions = ">=3.11"

[[package]]
name = "schedule"
version = "1.2.2"
description = "Job scheduling library"
category = "main"
optional = false
python-versions = ">=3.11"

[[package]]
name = "pandas"
version = "3.0.1"
description = "Data analysis and manipulation"
category = "main"
optional = false
python-versions = ">=3.11"

[[package]]
name = "ta"
version = "0.11.0"
description = "Technical analysis indicators for pandas"
category = "main"
optional = false
python-versions = ">=3.11"

[metadata]
python-versions = ">=3.11"
content-hash = "sha256:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
